unpackaged/main/default/objects/Country_Targets_Tax_Free__c/Country_Targets_Tax_Free__c.object-meta.xml
<CustomObject>
    <label>Country Targets Tax Free</label>
    <nameField>
        <label>Country Targets Tax Free Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Country Targets Tax Free</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>