unpackaged/main/default/objects/Country_Targets_Tax_Free__c/fields/Achieved__c.field-meta.xml
<CustomField>
    <fullName>Achieved__c</fullName>
    <label>% Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>