unpackaged/main/default/objects/Country_Targets_Tax_Free__c/fields/Percent_of_Target_Stage_4__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Target_Stage_4__c</fullName>
    <label>Percent of Target Stage 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>