unpackaged/main/default/objects/Country_Targets_Tax_Free__c/fields/Signed__c.field-meta.xml
<CustomField>
    <fullName>Signed__c</fullName>
    <label>Signed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>