unpackaged/main/default/objects/Country_Targets_Tax_Free__c/fields/Stage_5__c.field-meta.xml
<CustomField>
    <fullName>Stage_5__c</fullName>
    <label>Stage 5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>