unpackaged/main/default/objects/Country_Targets_Tax_Free__c/fields/Stages_3_5__c.field-meta.xml
<CustomField>
    <fullName>Stages_3_5__c</fullName>
    <label>Stages 3 - 5</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>