unpackaged/main/default/objects/Country_Targets_Tax_Free__c/fields/TF_Annual_Net_Commission__c.field-meta.xml
<CustomField>
    <fullName>TF_Annual_Net_Commission__c</fullName>
    <label>TF Annual Net Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>