unpackaged/main/default/objects/Country_Targets_Tax_Free__c/fields/Variance_to_Target__c.field-meta.xml
<CustomField>
    <fullName>Variance_to_Target__c</fullName>
    <label>Variance to Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>